objects/L2I_PTS_Aircraft_Type__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Aircraft Type</label>
        <referenceTo>L2I_Aircraft_Type__c</referenceTo>
        <relationshipLabel>PTS Aircraft Types</relationshipLabel>
        <relationshipName>PTS_Aircraft_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Quote_Primary__c</fullName>
        <formula>Quote__r.SBQQ__Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quote Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>Quote__r.SBQQ__Opportunity2__c</formula>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTS_Service_Types__c</fullName>
        <label>PTS Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CABIN/AIRCRAFT MAINTENANCE PER A/C</fullName>
                </value>
                <value>
                    <fullName>CABIN/AIRCRAFT MAINTENANCE PER TURN</fullName>
                </value>
                <value>
                    <fullName>FIXED PRICE REPAIRS - PER A/C</fullName>
                </value>
                <value>
                    <fullName>FIXED PRICE REPAIRS - PER LRU</fullName>
                </value>
                <value>
                    <fullName>LABOR ONLY (IFEC)</fullName>
                </value>
                <value>
                    <fullName>LINE MAINTENANCE</fullName>
                </value>
                <value>
                    <fullName>MATERIAL SOLUTION</fullName>
                </value>
                <value>
                    <fullName>MTL SOLUTION/TECHNICAL ADVISORY</fullName>
                </value>
                <value>
                    <fullName>OCC/TSR GCS SUPPORT</fullName>
                </value>
                <value>
                    <fullName>PTS - NON-PAC IFE</fullName>
                </value>
                <value>
                    <fullName>PTS - OTHER</fullName>
                </value>
                <value>
                    <fullName>RACKS - LEASE</fullName>
                </value>
                <value>
                    <fullName>RACKS - PURCHASE</fullName>
                </value>
                <value>
                    <fullName>REPAIRS SUPPORT</fullName>
                </value>
                <value>
                    <fullName>SPARES - INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>SPARES - MONTHLY</fullName>
                </value>
                <value>
                    <fullName>TECHNICAL ADVISORY - PER A/C</fullName>
                </value>
                <value>
                    <fullName>TECHNICAL ADVISORY -MONTHLY</fullName>
                </value>
                <value>
                    <fullName>TESTER - LEASE</fullName>
                </value>
                <value>
                    <fullName>TESTER - PURCHASE</fullName>
                </value>
                <value>
                    <fullName>TOTAL CARE PACKAGE</fullName>
                </value>
                <value>
                    <fullName>TRAINING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Firm</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Optional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Optional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>PTS Aircraft Types</relationshipLabel>
        <relationshipName>PTS_Aircraft_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Type_1__c</fullName>
        <label>System Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_System_Type_On_Quote</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Type_2__c</fullName>
        <label>System Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_System_Type_On_Quote</valueSetName>
        </valueSet>
    </fields>
    <label>PTS Aircraft Type</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTS Aircraft Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>